added: flask-restful, sqlalchemy, project structure changed in REST

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Flask  
-BeautifulSoup
-pymongo
+bs4
 requests
+flask-sqlalchemy
+flask-restful
+python-dotenv
+flask-migrate
+flask-marshmallow
+marshmallow-sqlalchemy
+passlib
