--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# 
+instance/
+migrations/
+
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +20,9 @@ __pycache__/
 
 # C extensions
 *.so
+
+
+
 
 # Distribution / packaging
 .Python
@@ -119,14 +137,6 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
 
 # Spyder project settings
 .spyderproject
